--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -1,4 +1,4 @@
-name: FreeFire-Il2CppDumping
+name: FreeFire-Il2CppDumping-Enhanced
 
 on:
   push:
@@ -28,162 +28,128 @@ jobs:
           test $(stat -c%s Il2CppDumper.zip) -gt 100000
           unzip -q Il2CppDumper.zip -d Il2CppDumper
 
-      - name: Download Free Fire Max APK (Latest)
+      - name: Download Free Fire Max APK
         run: |
-          # Download latest Free Fire Max APK (arm64-v8a version)
-          curl -fsSL -o freefire-max.apk "https://files.catbox.moe/2326p1.apk" || \
-          curl -fsSL -o freefire-max.apk "https://github.com/kaifcodec/Upload_apk/releases/download/v1.1.2/freefire-max-latest.apk" || \
-          echo "Using fallback method - manual APK required"
+          curl -fsSL -o freefire-max.apk "https://files.catbox.moe/2326p1.apk"
 
-      - name: Extract APK and attempt to get IL2CPP files
+      - name: Extract APK and get IL2CPP files
         run: |
-          # Create extraction directory
           mkdir -p apk_extracted
-          
-          # Extract APK (it's just a ZIP file)
-          unzip -q freefire-max.apk -d apk_extracted || echo "APK extraction failed"
+          unzip -q freefire-max.apk -d apk_extracted
           
           echo "=== APK Structure Analysis ==="
-          if [ -d "apk_extracted" ]; then
-            find apk_extracted -name "*.so" | head -10
-            find apk_extracted -name "*metadata*" | head -10
-            
-            # Look for libil2cpp.so in lib directories
-            libil2cpp_path=""
-            if [ -f "apk_extracted/lib/arm64-v8a/libil2cpp.so" ]; then
-              libil2cpp_path="apk_extracted/lib/arm64-v8a/libil2cpp.so"
-            elif [ -f "apk_extracted/lib/armeabi-v7a/libil2cpp.so" ]; then
-              libil2cpp_path="apk_extracted/lib/armeabi-v7a/libil2cpp.so"
-            else
-              libil2cpp_path=$(find apk_extracted -name "libil2cpp.so" | head -1)
-            fi
-            
-            # Look for global-metadata.dat
-            metadata_path=""
-            if [ -f "apk_extracted/assets/bin/Data/Managed/Metadata/global-metadata.dat" ]; then
-              metadata_path="apk_extracted/assets/bin/Data/Managed/Metadata/global-metadata.dat"
-            else
-              metadata_path=$(find apk_extracted -name "*metadata*.dat" | head -1)
-            fi
-            
-            echo "Found libil2cpp.so: $libil2cpp_path"
-            echo "Found metadata: $metadata_path"
-            
-            # Copy files if found
-            if [ -n "$libil2cpp_path" ] && [ -f "$libil2cpp_path" ]; then
-              cp "$libil2cpp_path" libil2cpp.so
-              echo "libil2cpp.so size: $(stat -c%s libil2cpp.so) bytes"
-              file libil2cpp.so
-            fi
-            
-            if [ -n "$metadata_path" ] && [ -f "$metadata_path" ]; then
-              mkdir -p assets/bin/Data/Managed/Metadata
-              cp "$metadata_path" assets/bin/Data/Managed/Metadata/global-metadata.dat
-              echo "global-metadata.dat size: $(stat -c%s assets/bin/Data/Managed/Metadata/global-metadata.dat) bytes"
-              file assets/bin/Data/Managed/Metadata/global-metadata.dat
-            fi
-          fi
+          find apk_extracted -name "*.so" | head -10
+          find apk_extracted -name "*metadata*" | head -10
+          
+          # Copy files
+          cp apk_extracted/lib/arm64-v8a/libil2cpp.so .
+          mkdir -p assets/bin/Data/Managed/Metadata
+          cp apk_extracted/assets/bin/Data/Managed/Metadata/global-metadata.dat assets/bin/Data/Managed/Metadata/
+          
+          echo "libil2cpp.so size: $(stat -c%s libil2cpp.so) bytes"
+          echo "global-metadata.dat size: $(stat -c%s assets/bin/Data/Managed/Metadata/global-metadata.dat) bytes"
+          file libil2cpp.so
+          file assets/bin/Data/Managed/Metadata/global-metadata.dat
 
-      - name: Verify extraction or use fallback files
+      - name: Create output directory
         run: |
           mkdir -p dumper_output
-          
-          # Check if we successfully extracted files
-          if [ ! -f "libil2cpp.so" ] || [ ! -f "assets/bin/Data/Managed/Metadata/global-metadata.dat" ]; then
-            echo "=== APK extraction failed or files are protected ==="
-            echo "This is expected for Free Fire Max due to encryption/protection"
-            
-            # Use your working files as fallback
-            echo "Attempting to use your known working files as fallback..."
-            curl -fsSL -o libil2cpp.so "https://github.com/kaifcodec/Upload_apk/releases/download/v1.1.2/libil2cpp.so" || echo "Fallback libil2cpp.so not available"
-            curl -fsSL -o global-metadata.dat "https://github.com/kaifcodec/Upload_apk/releases/download/v1.1.3/global-metadata.dat" || echo "Fallback metadata not available"
-            
-            if [ -f "global-metadata.dat" ]; then
-              mkdir -p assets/bin/Data/Managed/Metadata
-              mv global-metadata.dat assets/bin/Data/Managed/Metadata/global-metadata.dat
-            fi
-          fi
-          
-          # Final verification
-          if [ -f "libil2cpp.so" ] && [ -f "assets/bin/Data/Managed/Metadata/global-metadata.dat" ]; then
-            echo "✓ Files ready for Il2CppDumper"
-            echo "libil2cpp.so: $(stat -c%s libil2cpp.so) bytes"
-            echo "global-metadata.dat: $(stat -c%s assets/bin/Data/Managed/Metadata/global-metadata.dat) bytes"
-          else
-            echo "❌ Required files not available"
-            echo "Free Fire Max uses encrypted IL2CPP files that require runtime dumping"
-            
-            # Create informational report using echo instead of heredoc
-            echo "Free Fire Max IL2CPP Protection Analysis" > dumper_output/FREE_FIRE_PROTECTION_INFO.txt
-            echo "=======================================" >> dumper_output/FREE_FIRE_PROTECTION_INFO.txt
-            echo "" >> dumper_output/FREE_FIRE_PROTECTION_INFO.txt
-            echo "Status: Cannot extract IL2CPP files from APK" >> dumper_output/FREE_FIRE_PROTECTION_INFO.txt
-            echo "Reason: Free Fire Max uses encrypted/protected IL2CPP files" >> dumper_output/FREE_FIRE_PROTECTION_INFO.txt
-            echo "" >> dumper_output/FREE_FIRE_PROTECTION_INFO.txt
-            echo "Protection Methods Detected:" >> dumper_output/FREE_FIRE_PROTECTION_INFO.txt
-            echo "1. Encrypted global-metadata.dat in APK" >> dumper_output/FREE_FIRE_PROTECTION_INFO.txt
-            echo "2. Runtime decryption of metadata" >> dumper_output/FREE_FIRE_PROTECTION_INFO.txt
-            echo "3. Stripped libil2cpp.so without symbols" >> dumper_output/FREE_FIRE_PROTECTION_INFO.txt
-            echo "4. Anti-dumping detection mechanisms" >> dumper_output/FREE_FIRE_PROTECTION_INFO.txt
-            echo "" >> dumper_output/FREE_FIRE_PROTECTION_INFO.txt
-            echo "Required Approach:" >> dumper_output/FREE_FIRE_PROTECTION_INFO.txt
-            echo "- Runtime memory dumping using tools like:" >> dumper_output/FREE_FIRE_PROTECTION_INFO.txt
-            echo "  * Game Guardian with IL2CPP dumping scripts" >> dumper_output/FREE_FIRE_PROTECTION_INFO.txt
-            echo "  * Frida-based dumping tools" >> dumper_output/FREE_FIRE_PROTECTION_INFO.txt
-            echo "  * LibDumper with root access" >> dumper_output/FREE_FIRE_PROTECTION_INFO.txt
-            echo "  * Memory dump analysis during game execution" >> dumper_output/FREE_FIRE_PROTECTION_INFO.txt
-            echo "" >> dumper_output/FREE_FIRE_PROTECTION_INFO.txt
-            echo "Alternative Solutions:" >> dumper_output/FREE_FIRE_PROTECTION_INFO.txt
-            echo "1. Use runtime dumping tools on a rooted device" >> dumper_output/FREE_FIRE_PROTECTION_INFO.txt
-            echo "2. Use Frida scripts for runtime IL2CPP extraction" >> dumper_output/FREE_FIRE_PROTECTION_INFO.txt
-            echo "3. Memory analysis during game execution" >> dumper_output/FREE_FIRE_PROTECTION_INFO.txt
-            echo "4. Use specialized tools like Il2CppInspector with memory dumps" >> dumper_output/FREE_FIRE_PROTECTION_INFO.txt
-            echo "" >> dumper_output/FREE_FIRE_PROTECTION_INFO.txt
-            echo "Note: This protection is intentional by Garena to prevent" >> dumper_output/FREE_FIRE_PROTECTION_INFO.txt
-            echo "reverse engineering and cheat development." >> dumper_output/FREE_FIRE_PROTECTION_INFO.txt
-            
-            exit 0
-          fi
 
       - name: Attempt Il2CppDumper processing
         run: |
-          echo "=== Attempting Il2CppDumper ==="
-          
+          echo "=== Attempting Il2CppDumper v6.7.46 ==="
           set +e
           printf '\n\n' | timeout 120 dotnet Il2CppDumper/Il2CppDumper.dll libil2cpp.so assets/bin/Data/Managed/Metadata/global-metadata.dat dumper_output
           exit_code=$?
           set -e
           
-          echo "Il2CppDumper exit code: $exit_code"
+          echo "Il2CppDumper v6.7.46 exit code: $exit_code"
           
           if [ -d "dumper_output" ] && [ "$(ls -A dumper_output 2>/dev/null)" ]; then
-            echo "✅ Il2CppDumper generated some output"
-            ls -la dumper_output/
+            echo "✅ Il2CppDumper v6.7.46 succeeded!"
             find dumper_output -name "*.cs" | wc -l | xargs echo "C# files generated:"
+            success=true
           else
-            echo "⚠️ Il2CppDumper failed - this is expected for protected Free Fire files"
+            echo "⚠️ Il2CppDumper v6.7.46 failed"
+            success=false
+          fi
+          
+          echo "DUMPER_SUCCESS=$success" >> $GITHUB_ENV
+
+      - name: Try Il2CppInspector as fallback
+        if: env.DUMPER_SUCCESS == 'false'
+        run: |
+          echo "=== Trying Il2CppInspector as fallback ==="
+          
+          curl -fsSL -o Il2CppInspector.zip "https://github.com/djkaty/Il2CppInspector/releases/latest/download/Il2CppInspector-linux-x64.zip"
+          unzip -q Il2CppInspector.zip -d Il2CppInspector
+          chmod +x Il2CppInspector/Il2CppInspector.CLI
+          
+          mkdir -p inspector_output
+          
+          ./Il2CppInspector/Il2CppInspector.CLI \
+            --bin=libil2cpp.so \
+            --metadata=assets/bin/Data/Managed/Metadata/global-metadata.dat \
+            --out=inspector_output \
+            --select-outputs=cs,json,py || echo "Il2CppInspector failed"
+          
+          if [ -d "inspector_output" ] && [ "$(ls -A inspector_output 2>/dev/null)" ]; then
+            echo "✅ Il2CppInspector succeeded!"
+            cp -r inspector_output/* dumper_output/ 2>/dev/null || true
+            echo "INSPECTOR_SUCCESS=true" >> $GITHUB_ENV
+          else
+            echo "⚠️ Il2CppInspector also failed"
           fi
 
-      - name: Generate final report
+      - name: Try older Il2CppDumper version
+        if: env.DUMPER_SUCCESS == 'false' && env.INSPECTOR_SUCCESS != 'true'
+        run: |
+          echo "=== Trying Il2CppDumper v6.7.40 ==="
+          
+          curl -fsSL -o Il2CppDumper-old.zip "https://github.com/Perfare/Il2CppDumper/releases/download/v6.7.40/Il2CppDumper-net6-v6.7.40.zip"
+          unzip -q Il2CppDumper-old.zip -d Il2CppDumper-old
+          
+          printf '\n\n' | timeout 60 dotnet Il2CppDumper-old/Il2CppDumper.dll libil2cpp.so assets/bin/Data/Managed/Metadata/global-metadata.dat dumper_output_old || echo "Older version failed"
+          
+          if [ -d "dumper_output_old" ] && [ "$(ls -A dumper_output_old 2>/dev/null)" ]; then
+            echo "✅ Il2CppDumper v6.7.40 succeeded!"
+            cp -r dumper_output_old/* dumper_output/ 2>/dev/null || true
+          fi
+
+      - name: Generate final analysis report
         if: always()
         run: |
-          echo "=== Free Fire Max IL2CPP Analysis Complete ==="
+          echo "=== Final Analysis Report ==="
           
-          if [ -d "dumper_output" ]; then
-            file_count=$(find dumper_output -type f | wc -l)
-            echo "Files in output: $file_count"
+          if [ -d "dumper_output" ] && [ "$(find dumper_output -name '*.cs' | wc -l)" -gt 0 ]; then
+            cs_files=$(find dumper_output -name '*.cs' | wc -l)
+            json_files=$(find dumper_output -name '*.json' | wc -l)
+            echo "✅ SUCCESS: Generated $cs_files C# files and $json_files JSON files"
             
-            if [ $file_count -gt 5 ]; then
-              echo "✅ SUCCESS: Il2CppDumper successfully processed the files"
-            else
-              echo "⚠️ LIMITED: Only partial results or protection info generated"
-            fi
+            # Create summary
+            echo "Free Fire Max IL2CPP Dump Summary" > dumper_output/DUMP_SUMMARY.txt
+            echo "=================================" >> dumper_output/DUMP_SUMMARY.txt
+            echo "Generated Files:" >> dumper_output/DUMP_SUMMARY.txt
+            echo "- C# files: $cs_files" >> dumper_output/DUMP_SUMMARY.txt
+            echo "- JSON files: $json_files" >> dumper_output/DUMP_SUMMARY.txt
+            echo "- Total size: $(du -sh dumper_output | cut -f1)" >> dumper_output/DUMP_SUMMARY.txt
+            
+          else
+            echo "❌ All dumping methods failed"
+            
+            echo "Free Fire Max Analysis - Manual Methods Required" > dumper_output/MANUAL_ANALYSIS_GUIDE.txt
+            echo "================================================" >> dumper_output/MANUAL_ANALYSIS_GUIDE.txt
+            echo "The Free Fire Max binary is heavily stripped and protected." >> dumper_output/MANUAL_ANALYSIS_GUIDE.txt
+            echo "Consider these manual approaches:" >> dumper_output/MANUAL_ANALYSIS_GUIDE.txt
+            echo "1. Use IDA Pro/Ghidra to find CodeRegistration manually" >> dumper_output/MANUAL_ANALYSIS_GUIDE.txt
+            echo "2. Runtime memory dumping with Frida" >> dumper_output/MANUAL_ANALYSIS_GUIDE.txt
+            echo "3. GameGuardian IL2CPP dumping scripts" >> dumper_output/MANUAL_ANALYSIS_GUIDE.txt
           fi
 
       - name: Upload Analysis Results
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: FreeFire-IL2CPP-Analysis
+          name: FreeFire-IL2CPP-Complete-Analysis
           path: dumper_output/
           retention-days: 30
